--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -404,24 +404,17 @@
 				}
 	
 			ul.socialmedia { 
-				margin-top: -10px; 
+				margin: -10px 0 0 0; 
 				text-align: center; 
 				float: right;
 			}	
-				nav.top-nav ul.socialmedia li { 
+				nav.top-nav ul.socialmedia li {
 					margin: 0px;
-					padding: 0px 4px;
+					padding-right: 10px!important;
 				}
-					ul.socialmedia li a {
-						border: 2px solid #514525;
-						border-radius: 20px;
-					}
-						ul.socialmedia li a i.fa-facebook {
-							padding: 5px 10px;
-						}
-						ul.socialmedia li a i.fa-twitter {
-							padding: 5px 8px;
-						}
+				nav.top-nav ul.socialmedia li:last-child {
+					padding-right: 0px!important;
+				}
 	/* mobile menu */
 	ul.nav.navbar-nav li {
 		width: 100%;
