--- a/style.css
+++ b/style.css
@@ -10152,7 +10152,9 @@ Custom MCAN Styles
     width: 100%;
     z-index: 9999!important;    
 }
-
+.logo img {
+	max-width: 220px;
+}    
 #main-header.shadow {
 	box-shadow: 0px -6px 25px 5px #555555;
 }
@@ -10185,12 +10187,31 @@ ul.menu-cta-menu {
 nav.social-nav {
     float: right;
 }
+.socialmedia {
+	margin: -10px 0 0 25px;
+}
 .socialmedia li a i {
     color: #515254;
     font-size: 19px;
     vertical-align: middle;
 }
-
+nav.top-nav ul.socialmedia li { 
+	margin: 0px;
+	padding: 0px 15px 0 0;
+}
+nav.top-nav ul.socialmedia li:last-child {
+	padding-right: 0px;
+}
+	ul.socialmedia li a {
+		border: 2px solid #514525;
+		border-radius: 20px;
+	}
+		ul.socialmedia li a i.fa-facebook {
+			padding: 5px 10px;
+		}
+		ul.socialmedia li a i.fa-twitter {
+			padding: 5px 8px;
+		}
 /* MAIN NAV */
 .main-navbar nav.navigation {
 	float: right;
