--- a/style.css
+++ b/style.css
@@ -3947,7 +3947,7 @@ button.close-v2 {
     color: #999;
     display: inline-block;
     float: left;
-    font-size: 14px !important;
+    font-size: 14px;
     margin-bottom: 15px;
     text-transform: uppercase;
 }
@@ -10507,7 +10507,7 @@ body.home section.contact-form {
 /* Homepage Blog Reel */
 
 .cs-section-title h2 {
-	font-size: 25px!important;
+	font-size: 25px;
 	color: #515254!Important;
 	font-weight: 900!important;
 }
