--- a/assets/css/eventCalendar.css
+++ b/assets/css/eventCalendar.css
@@ -331,7 +331,7 @@
 		.eventsCalendar-list li time small {
 			font-size:10px;
 			float:left;
-			background-color:#807E7E;
+			background-color:#ec7f23;
 			color:#fff;
 			padding:0 5px 0 4px;
 			margin:0 0 0 3px;
