--- a/style.css
+++ b/style.css
@@ -10617,7 +10617,7 @@ body.home section.homepage-content-howwework{
 	font-size: 20px;
 	padding: 10px 15px;
 }
-.main-section .homepage-content-howwework .cta.orange {
+.main-section .homepage-content-howwework .cta {
 	position: relative;
 	display: block;
 	width: 360px;
@@ -10888,7 +10888,7 @@ article.cs-events.events-minimal {
 	#affiliate-ecco .cs-events.events-minimal h2, #affiliate-ecco .cs-events.events-minimal h2:after { border-color: #6ccdb3;  }
 	#affiliate-ecco .cs-events.events-minimal .event-link a { color: #6ccdb3; }
 	#affiliate-ecco .cs-events.events-minimal h2 { color: #003a5d!important; }
-	
+	#affiliate-ecco .main-section .homepage-content-howwework .cta { background-color: #f8991d; }
 
 #affiliate-bic {
 
