--- a/style.css
+++ b/style.css
@@ -10144,6 +10144,15 @@ Custom MCAN Styles
 .left { float: left!important; }
 .right { float: left!important; }
 
+/* custom column widths */
+.column-33 {
+    width: 33%;
+    float: left;
+    padding: 10px;
+}
+.column-33 a.cta {
+    padding: 15px;
+}
 
 /* Header */
 .header-absolute #main-header {
@@ -10618,7 +10627,7 @@ body.home section.homepage-content-howwework{
 	line-height: 30px!important;
 	padding: 10px 15px;
 }
-.main-section .homepage-content-howwework .cta {
+.main-section .cta {
 	position: relative;
 	display: block;
 	width: 360px;
@@ -10918,7 +10927,7 @@ article.cs-events.events-minimal {
 		padding-top: 0px!important;
 	}
 	#affiliate-ecco .main-section .homepage-content-howwework p { text-align: left; }
-	#affiliate-ecco .main-section .homepage-content-howwework .cta { 
+	#affiliate-ecco .main-section .cta { 
 		background-color: #6ccdb3; 
 		float: left;
 		width: 48%;
