--- a/style.css
+++ b/style.css
@@ -10174,7 +10174,7 @@ Custom MCAN Styles
     position: fixed;
     top: 0px;
     width: 100%;
-    z-index: 9999!important;    
+    z-index: 1000!important;    
 }
 .logo img {
 	max-width: 220px;
@@ -10670,7 +10670,7 @@ body.home section.homepage-content-howwework{
 	background-color: #ffffff!important;
 	border-left: none!important;
 }
-.widget.event-calendar .eventsCalendar-monthWrap .eventsCalendar-currentTitle {
+.widget.event-calendar .eventsCalendar-monthWrap .eventsCalendar-currentTitle, .widget_calendar caption  {
 	background-color: #ee8c3a!important;
 }
 .widget.event-calendar .eventsCalendar-monthWrap .eventsCalendar-day-header
