--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2118,9 +2118,11 @@ tbody.collapse.in {
   position: relative;
   height: 0;
   overflow: hidden;
+  /*
   -webkit-transition: height 0.35s ease;
   -o-transition: height 0.35s ease;
   transition: height 0.35s ease;
+  */
 }
 .btn-group,
 .btn-group-vertical {
